Style tweak to fix menu anchor item's right margin and align it to edge.

--- a/source/css/components/quire-menu.scss
+++ b/source/css/components/quire-menu.scss
@@ -67,7 +67,7 @@
   &__list,
   &__formats {
     a {
-      margin-left: -1rem;
+      margin: 0 -1rem;
       border-radius: 0;
       border-left: 3px solid $dark;
       &:hover {
